--- a/vietnam/pom.xml
+++ b/vietnam/pom.xml
@@ -20,6 +20,20 @@
 			<version>${javaee.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- SPRING -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!-- JSTL-->
+		
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<dependency>
 
 			<groupId>junit</groupId>
