--- a/vietnam/.settings/org.eclipse.core.resources.prefs
+++ b/vietnam/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,12 @@
 >>>>>>>=branch 'master' of https\://github.com/lovebeat/Vn-Vn.git
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/webapp/WEB-INF/views/detailFood.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/detailPlace.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/food.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/manageCities.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/managePlaces.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/searchHotel.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/shared/contact.jsp=UTF-8
 encoding/<project>=UTF-8
