--- a/vietnam/src/main/webapp/WEB-INF/web.xml
+++ b/vietnam/src/main/webapp/WEB-INF/web.xml
@@ -14,9 +14,9 @@
 			<param-value>true</param-value>
 		</init-param>
 		<multipart-config>
-			<max-file-size>2097152</max-file-size>
-			<max-request-size>4194304</max-request-size>
-			<file-size-threshold>104576</file-size-threshold>
+			<max-file-size>10485760</max-file-size>
+			<max-request-size>52428800</max-request-size>
+			<file-size-threshold>5242880</file-size-threshold>
 		</multipart-config>
 	</servlet>
 	<servlet-mapping>
@@ -37,18 +37,7 @@
 		</param-value>
 	</context-param>
 	
-	<!-- Spring Security filter -->
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	<!-- utf-8 -->
+		<!-- utf-8 -->
 	<filter>
      	<filter-name>encoding-filter</filter-name>
      	<filter-class>
@@ -68,5 +57,18 @@
       	<filter-name>encoding-filter</filter-name>
       	<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- Spring Security filter -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+
 	
 </web-app>
